1-infrastructure/keycloak/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  # TẮT TẠM THỜI: Để số 0 để K8s thu hồi toàn bộ Pod.
  # Khi nào cần bật lại, chỉ cần sửa thành 1.
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        # Thêm phần resources để K8s cấp phát và quản lý RAM/CPU tốt hơn
        resources:
          requests:
            memory: "768Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
