1-infrastructure/keycloak/03-service.yaml
# Expose port cho Keycloak

apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: default
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
  - name: http
    port: 8080
    targetPort: 8080
